--- a/src/style.css
+++ b/src/style.css
@@ -69,6 +69,10 @@ body {
     max-width: 33.333333%;
 }
 
+.experList {
+    display: flex;
+}
+
 .pr15 {
     padding-right: 15px;
 }
@@ -85,6 +89,10 @@ body {
     padding-bottom: 15px;
 }
 
+.pt30 {
+    padding-top: 30px;
+}
+
 .contact {
     display: flex;
     padding-top: 15px;
@@ -95,6 +103,11 @@ body {
     display: flex;
     padding-top: 15px;
     font-weight: 700;
+}
+
+.experTitle {
+    font-size: 1.5rem;
+    font-family: var(--font-bold);
 }
 
 .row {
