--- a/src/style.css
+++ b/src/style.css
@@ -117,9 +117,19 @@ body {
 .rows {
     padding: 10px;
     border-radius: 5px;
-    background-color: gainsboro;
-    border: 1px solid gainsboro;
+    background-color: #f5f5f5;
+    border: 1px solid #f5f5f5;
     margin-top : 2rem;
+}
+
+.foot {
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #f5f5f5;
+    border: 1px solid #f5f5f5;
+    margin-top : 2rem;
+    margin-bottom : 1rem;
+    text-align: center;
 }
 
 .off {
